No verbose gc
Signed-off-by: Matt Bentley <mbentley@mbentley.net>